--- a/config-example.json
+++ b/config-example.json
@@ -39,51 +39,51 @@
       "roomId": "3e2a6d718998453da8181c9f75c3a5efa612df99"
     },
     {
-      "name": "Money Changers/To/Agatean Empire/From Ankh-Morpork/Bes Pelargic Money Changers",
+      "name": "Money Changers/To/Counterweight Continent/From Ankh-Morpork/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/To/Agatean Empire/From Djelibeybi/Bes Pelargic Money Changers",
+      "name": "Money Changers/To/Counterweight Continent/From Djelibeybi/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/To/Agatean Empire/From Genua/Bes Pelargic Money Changers",
+      "name": "Money Changers/To/Counterweight Continent/From Genua/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/To/Ankh-Morpork/From Agatean Empire/Bes Pelargic Money Changers",
+      "name": "Money Changers/To/Ankh-Morpork/From Counterweight Continent/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/To/Djelibeybi/From Agatean Empire/Bes Pelargic Money Changers",
+      "name": "Money Changers/To/Djelibeybi/From Counterweight Continent/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/To/Genua/From Agatean Empire/Bes Pelargic Money Changers",
+      "name": "Money Changers/To/Genua/From Counterweight Continent/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/From/Agatean Empire/To Ankh-Morpork/Bes Pelargic Money Changers",
+      "name": "Money Changers/From/Counterweight Continent/To Ankh-Morpork/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/From/Agatean Empire/To Djelibeybi/Bes Pelargic Money Changers",
+      "name": "Money Changers/From/Counterweight Continent/To Djelibeybi/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/From/Agatean Empire/To Genua/Bes Pelargic Money Changers",
+      "name": "Money Changers/From/Counterweight Continent/To Genua/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/From/Ankh-Morpork/To Agatean Empire/Bes Pelargic Money Changers",
+      "name": "Money Changers/From/Ankh-Morpork/To Counterweight Continent/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/From/Djelibeybi/To Agatean Empire/Bes Pelargic Money Changers",
+      "name": "Money Changers/From/Djelibeybi/To Counterweight Continent/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
-      "name": "Money Changers/From/Genua/To Agatean Empire/Bes Pelargic Money Changers",
+      "name": "Money Changers/From/Genua/To Counterweight Continent/Bes Pelargic Money Changers",
       "roomId": "24b2ffde15897df53f685128b8cc6fe22a534c51"
     },
     {
@@ -227,19 +227,19 @@
       "roomId": "3903070ab58bf7fd52cc6484984647fe6133dfc6"
     },
     {
-      "name": "Money Changers/From/Lancre/To Agatean Empire/Ohulan-Cutash Money Changer",
+      "name": "Money Changers/From/Lancre/To Counterweight Continent/Ohulan-Cutash Money Changer",
       "roomId": "3903070ab58bf7fd52cc6484984647fe6133dfc6"
     },
     {
-      "name": "Money Changers/To/Lancre/From Agatean Empire/Ohulan-Cutash Money Changer",
+      "name": "Money Changers/To/Lancre/From Counterweight Continent/Ohulan-Cutash Money Changer",
       "roomId": "3903070ab58bf7fd52cc6484984647fe6133dfc6"
     },
     {
-      "name": "Money Changers/From/Agatean Empire/To Lancre/Ohulan-Cutash Money Changer",
+      "name": "Money Changers/From/Counterweight Continent/To Lancre/Ohulan-Cutash Money Changer",
       "roomId": "3903070ab58bf7fd52cc6484984647fe6133dfc6"
     },
     {
-      "name": "Money Changers/To/Agatean Empire/From Lancre/Ohulan-Cutash Money Changer",
+      "name": "Money Changers/To/Counterweight Continent/From Lancre/Ohulan-Cutash Money Changer",
       "roomId": "3903070ab58bf7fd52cc6484984647fe6133dfc6"
     },
     {
@@ -317,6 +317,278 @@
     {
       "name": "Vaults/Jonas\u0027 Vault",
       "roomId": "66cdb7f0e0fd006c472e00abf2fb23348bb74337"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Ankh-Morpork/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ephebe/From Djelibeybi/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Djelibeybi/From Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Djelibeybi/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Djelibeybi/To Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ephebe/From Howondaland/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Howondaland/From Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Howondaland/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Howondaland/To Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ephebe/From Counterweight Continent/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Counterweight Continent/From Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Counterweight Continent/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Counterweight Continent/To Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ephebe/From Klatch/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Klatch/From Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Klatch/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Klatch/To Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ephebe/From Ankh-Morpork/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ankh-Morpork/From Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Ankh-Morpork/To Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ephebe/From Tsort/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Tsort/From Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Tsort/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/From/Tsort/To Ephebe/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
+    },
+    {
+      "name": "Money Changers/To/Ankh-Morpork/From Djelibeybi/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Djelibeybi/From Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Ankh-Morpork/To Djelibeybi/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Djelibeybi/To Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Ankh-Morpork/From Counterweight Continent/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Counterweight Continent/From Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Ankh-Morpork/To Counterweight Continent/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Counterweight Continent/To Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Ankh-Morpork/From Ephebe/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Ephebe/From Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Ankh-Morpork/To Ephebe/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Ankh-Morpork/From Lancre/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Lancre/From Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Ankh-Morpork/To Lancre/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Lancre/To Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Ankh-Morpork/From Klatch/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Klatch/From Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Ankh-Morpork/To Klatch/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Klatch/To Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Ankh-Morpork/From Genua/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/To/Genua/From Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Ankh-Morpork/To Genua/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Money Changers/From/Genua/To Ankh-Morpork/Ankh Bridge Currency Exchange",
+      "roomId": "1934a41b8797b3e64175f0ec01523db91e736b33"
+    },
+    {
+      "name": "Regions/Ankh-Morpork/Lanfear\u0027s House",
+      "roomId": "a5df4b73f004d57d7ceab81bab38c168736d0c96"
+    }
+  ],
+  "triggers": [
+    {
+      "pattern": "^Whoops!  You tried to carry too many things and fumbled .*$",
+      "foreground": "#FFFFFF",
+      "background": "#FF0000",
+      "bold": true,
+      "systemBeep": true,
+      "sendToChitchat": false
+    },
+    {
+      "pattern": "^When you open the .* you think you can hear a faint rumbling sound from it\\.$",
+      "foreground": "#FFFFFF",
+      "background": "#FF0000",
+      "bold": true,
+      "systemBeep": true,
+      "sendToChitchat": false
+    },
+    {
+      "pattern": "^Your divine protection is weakening\\.$",
+      "foreground": "#000000",
+      "background": "#FFFFFF",
+      "bold": false,
+      "systemBeep": true,
+      "sendToChitchat": false
+    },
+    {
+      "pattern": "^Your divine protection expires\\.$",
+      "foreground": "#000000",
+      "background": "#FFFFFF",
+      "bold": false,
+      "systemBeep": true,
+      "sendToChitchat": false
+    },
+    {
+      "pattern": "^\\([^)]*\\) .*",
+      "foreground": "#B478FF",
+      "bold": false,
+      "systemBeep": false,
+      "sendToChitchat": true
+    },
+    {
+      "pattern": "^.+ asks you: .*$",
+      "foreground": "#FFEB50",
+      "bold": false,
+      "systemBeep": true,
+      "sendToChitchat": true
+    },
+    {
+      "pattern": "^.+ tells you: .*$",
+      "foreground": "#FFEB50",
+      "bold": false,
+      "systemBeep": true,
+      "sendToChitchat": true
+    },
+    {
+      "pattern": "^You .* tell .+: .*$",
+      "foreground": "#FFEB50",
+      "bold": false,
+      "systemBeep": true,
+      "sendToChitchat": true
+    },
+    {
+      "pattern": "^You have been awarded .*$",
+      "foreground": "#FFFFFF",
+      "bold": true,
+      "systemBeep": false,
+      "sendToChitchat": false
+    },
+    {
+      "pattern": "^Mr Werks selects a bit of chalk from the chalk tray and then scribbles noisily on the job board.$",
+      "background": "#CC33FF",
+      "bold": true,
+      "systemBeep": true,
+      "sendToChitchat": false
     }
   ]
 }
